[package]

name = "rustc-serialize2"
version = "0.3.25"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/rustc-serialize"
homepage = "https://github.com/rust-lang/rustc-serialize"
documentation = "https://doc.rust-lang.org/rustc-serialize"
description = """
Generic serialization/deserialization support corresponding to the
`derive(RustcEncodable, RustcDecodable)` mode in the compiler. Also includes
support for hex, base64, and json encoding and decoding.

This crate is deprecated in favor of serde.

Compared to the original rustc-serialize, this crate:
* Supports all `rustc` targets.
* Can work in `no_std` environments with the `alloc` crate.
"""

[lib]
name = "rustc_serialize"

[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.3"
